# python-events

./: .gitignore  README.md  pyproject.toml  setup.py
cython_core/: .gitignore  events_core.pyx  setup.py
examples/: standalone.py
requirements/: requirements-dev.txt  requirements.txt
tests/: django_settings.py
tests/django/: test_django.py
